--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             </ul>
         </nav>
         <div class="info">
-            <h1>I'm Kate <span>Amelia</span></h1>
+            <h1>I'm Piyush <span></span></h1>
             <p>This is my official portfolio website to showcase my all works related to web<br>development and UI design.</p>
             <a>Download CV</a>
 
         </div>
         <div class="img-box">
             <img src="./portfolio_site_img/pattern.png" class="back-img">
-            <img src="./portfolio_site_img/girl.png" class="main-img">
+<!--             <img src="./portfolio_site_img/girl.png" class="main-img"> -->
 
         </div>
         <div class="social-links">
